# get_pet

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  config.py  crud.py  database.py  example.env  main.py  models.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 2024_08_12_1519-14904d68974a_create_table.py
src/api/api_v1/: owner.py
src/models/: __init__.py  models.py
src/repository/: base_repository.py  owner_repository.py
src/schemas/: base_schema.py  owner.py
src/services/: base_service.py  owner_service.py
src/utils/: consts.py  pagination.py
